feat(frontend): use nuxt
